# api_gateway/docs/swagger.json
@@ -1,10 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "Online Voting System Swagger UI",
         "contact": {}
     },
-    "basePath": "/",
     "paths": {
         "/candidate/create": {
             "post": {
@@ -91,6 +89,49 @@
                     },
                     "500": {
                         "description": "Failed to create election",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/election/delete": {
+            "delete": {
+                "description": "Endpoint for deleting election",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Election"
+                ],
+                "summary": "Delete election",
+                "operationId": "delete_election",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "name": "id",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully deleted election",
+                        "schema": {
+                            "$ref": "#/definitions/voting.Void"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request payload",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to delete election",
                         "schema": {
                             "type": "string"
                         }
@@ -189,7 +230,7 @@
         },
         "/election/update": {
             "put": {
-                "description": "Endpoint for updating election",
+                "description": "Endpoint for deleting election",
                 "consumes": [
                     "application/json"
                 ],
@@ -423,13 +464,6 @@
         },
         "voting.Void": {
             "type": "object"
-        }
-    },
-    "securityDefinitions": {
-        "BearerAuth": {
-            "type": "apiKey",
-            "name": "role",
-            "in": "header"
         }
     }
 }
